// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`navigating between routes > given route with optional path parameters > when navigating to route with path parameters > renders 1`] = `
<div>
  <div
    class="Notifications"
  />
  <div
    class="ClusterManager"
  >
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive focusable"
            data-testid="home-button"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="home"
            >
              home
            </span>
          </i>
        </div>
        <div
          class="size-sm"
        />
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="history-back"
          >
            <span
              class="icon"
              data-icon-name="arrow_back"
            >
              arrow_back
            </span>
          </i>
        </div>
        <div
          class="size-sm"
        />
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="history-forward"
          >
            <span
              class="icon"
              data-icon-name="arrow_forward"
            >
              arrow_forward
            </span>
          </i>
        </div>
        <div
          class="separator"
        />
      </div>
    </div>
    <main>
      <div
        id="lens-views"
      />
      <pre>
        {
  "someParameter": "some-value",
  "someOtherParameter": "some-other-value"
}
      </pre>
    </main>
    <div
      class="HotbarMenu flex flex-col"
    >
      <div
        class="HotbarItems flex flex-col"
      >
        <div
          class="HotbarCell animateDown"
          index="0"
        >
          <div
            aria-describedby="DndDescribedBy-6"
            aria-disabled="false"
            aria-roledescription="draggable"
            role="button"
            style="z-index: 12; position: absolute; opacity: 1; pointer-events: auto;"
            tabindex="0"
          >
            <div
              class="HotbarIcon contextMenuAvailable"
            >
              <div
                class="Avatar rounded disabled avatar"
                id="hotbarIcon-hotbar-icon-welcome-page-entity"
                style="width: 40px; height: 40px; background: rgb(210, 16, 232);"
              >
                WP
              </div>
            </div>
          </div>
        </div>
        <div
          class="HotbarCell animateDown"
          index="1"
        >
          <div
            aria-describedby="DndDescribedBy-6"
            aria-disabled="false"
            aria-roledescription="draggable"
            role="button"
            style="z-index: 11; position: absolute; opacity: 1; pointer-events: auto;"
            tabindex="0"
          >
            <div
              class="HotbarIcon contextMenuAvailable"
            >
              <div
                class="Avatar rounded disabled avatar"
                id="hotbarIcon-hotbar-icon-catalog-entity"
                style="width: 40px; height: 40px; background: rgb(5, 1, 130);"
              >
                Ca
              </div>
            </div>
          </div>
        </div>
        <div
          class="HotbarCell animateDown"
          index="2"
        />
        <div
          class="HotbarCell animateDown"
          index="3"
        />
        <div
          class="HotbarCell animateDown"
          index="4"
        />
        <div
          class="HotbarCell animateDown"
          index="5"
        />
        <div
          class="HotbarCell animateDown"
          index="6"
        />
        <div
          class="HotbarCell animateDown"
          index="7"
        />
        <div
          class="HotbarCell animateDown"
          index="8"
        />
        <div
          class="HotbarCell animateDown"
          index="9"
        />
        <div
          class="HotbarCell animateDown"
          index="10"
        />
        <div
          class="HotbarCell animateDown"
          index="11"
        />
        <div
          id="DndDescribedBy-6"
          style="display: none;"
        >
          
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
        </div>
        <div
          aria-atomic="true"
          aria-live="assertive"
          id="DndLiveRegion-6"
          role="status"
          style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
        />
      </div>
      <div
        class="HotbarSelector"
      >
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="arrow_left"
          >
            arrow_left
          </span>
        </i>
        <div
          class="HotbarIndex"
        >
          <div
            class="badge Badge small clickable"
            data-testid="hotbar-menu-badge-for-Default"
            id="hotbarIndex"
          >
            1
          </div>
        </div>
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="arrow_right"
          >
            arrow_right
          </span>
        </i>
      </div>
    </div>
    <div
      class="StatusBar"
      data-testid="status-bar"
    >
      <div
        class="leftSide"
        data-testid="status-bar-left"
      />
      <div
        class="rightSide"
        data-testid="status-bar-right"
      />
    </div>
  </div>
</div>
`;

exports[`navigating between routes > given route without path parameters > when navigating to route > renders 1`] = `
<div>
  <div
    class="Notifications"
  />
  <div
    class="ClusterManager"
  >
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive focusable"
            data-testid="home-button"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="home"
            >
              home
            </span>
          </i>
        </div>
        <div
          class="size-sm"
        />
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="history-back"
          >
            <span
              class="icon"
              data-icon-name="arrow_back"
            >
              arrow_back
            </span>
          </i>
        </div>
        <div
          class="size-sm"
        />
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="history-forward"
          >
            <span
              class="icon"
              data-icon-name="arrow_forward"
            >
              arrow_forward
            </span>
          </i>
        </div>
        <div
          class="separator"
        />
      </div>
    </div>
    <main>
      <div
        id="lens-views"
      />
      <div>
        Some component
      </div>
    </main>
    <div
      class="HotbarMenu flex flex-col"
    >
      <div
        class="HotbarItems flex flex-col"
      >
        <div
          class="HotbarCell animateDown"
          index="0"
        >
          <div
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-roledescription="draggable"
            role="button"
            style="z-index: 12; position: absolute; opacity: 1; pointer-events: auto;"
            tabindex="0"
          >
            <div
              class="HotbarIcon contextMenuAvailable"
            >
              <div
                class="Avatar rounded disabled avatar"
                id="hotbarIcon-hotbar-icon-welcome-page-entity"
                style="width: 40px; height: 40px; background: rgb(210, 16, 232);"
              >
                WP
              </div>
            </div>
          </div>
        </div>
        <div
          class="HotbarCell animateDown"
          index="1"
        >
          <div
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-roledescription="draggable"
            role="button"
            style="z-index: 11; position: absolute; opacity: 1; pointer-events: auto;"
            tabindex="0"
          >
            <div
              class="HotbarIcon contextMenuAvailable"
            >
              <div
                class="Avatar rounded disabled avatar"
                id="hotbarIcon-hotbar-icon-catalog-entity"
                style="width: 40px; height: 40px; background: rgb(5, 1, 130);"
              >
                Ca
              </div>
            </div>
          </div>
        </div>
        <div
          class="HotbarCell animateDown"
          index="2"
        />
        <div
          class="HotbarCell animateDown"
          index="3"
        />
        <div
          class="HotbarCell animateDown"
          index="4"
        />
        <div
          class="HotbarCell animateDown"
          index="5"
        />
        <div
          class="HotbarCell animateDown"
          index="6"
        />
        <div
          class="HotbarCell animateDown"
          index="7"
        />
        <div
          class="HotbarCell animateDown"
          index="8"
        />
        <div
          class="HotbarCell animateDown"
          index="9"
        />
        <div
          class="HotbarCell animateDown"
          index="10"
        />
        <div
          class="HotbarCell animateDown"
          index="11"
        />
        <div
          id="DndDescribedBy-0"
          style="display: none;"
        >
          
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
        </div>
        <div
          aria-atomic="true"
          aria-live="assertive"
          id="DndLiveRegion-0"
          role="status"
          style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
        />
      </div>
      <div
        class="HotbarSelector"
      >
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="arrow_left"
          >
            arrow_left
          </span>
        </i>
        <div
          class="HotbarIndex"
        >
          <div
            class="badge Badge small clickable"
            data-testid="hotbar-menu-badge-for-Default"
            id="hotbarIndex"
          >
            1
          </div>
        </div>
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="arrow_right"
          >
            arrow_right
          </span>
        </i>
      </div>
    </div>
    <div
      class="StatusBar"
      data-testid="status-bar"
    >
      <div
        class="leftSide"
        data-testid="status-bar-left"
      />
      <div
        class="rightSide"
        data-testid="status-bar-right"
      />
    </div>
  </div>
</div>
`;
